# ProtX

./: .gitignore  CMakeLists.txt  README.md
Game/: Main.cpp
Main/: Main.cpp
ProtX/include/protx/: Prerequesites.h
ProtX/include/protx/core/: PCore.h  PLogger.h
ProtX/include/protx/graphics/: PGraphicsEngine.h
ProtX/include/protx/math/: PVec4.h
ProtX/include/protx/protx/: ProtX.h
ProtX/include/protx/window/: PWindow.h
ProtX/source/protx/core/: PLogger.cpp
ProtX/source/protx/graphics/Win32/: PWin32PGraphicsEngine.cpp
ProtX/source/protx/protx/: ProtX.cpp
ProtX/source/protx/protx/graphics/: PGraphicsEngine.cpp
ProtX/source/protx/protx/graphics/Win32/: PWin32PGraphicsEngine.cpp
ProtX/source/protx/protx/win32/: PWin32ProtX.cpp  Win32ProtX.cpp
ProtX/source/protx/window/: PWindow.cpp
ProtX/source/protx/window/win32/: PWin32Window.cpp  Win32PWindow.cpp
